@@ -8,6 +8,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 import umc.yorieter.config.security.util.SecurityUtil;
@@ -20,6 +21,7 @@ import umc.yorieter.payload.exception.GeneralException;
 import umc.yorieter.payload.status.ErrorStatus;
 import umc.yorieter.repository.*;
 import umc.yorieter.service.ImageUploadService.ImageUploadService;
+import umc.yorieter.web.dto.request.IngredientRequestDTO;
 import umc.yorieter.web.dto.request.RecipeRequestDTO;
 import umc.yorieter.web.dto.response.IngredientResponseDTO;
 import umc.yorieter.web.dto.response.RecipeResponseDTO;
@@ -59,6 +61,7 @@ public class RecipeServiceImpl implements RecipeService {
 
 
     // 레시피 작성
+    @Transactional
     @Override
     public RecipeResponseDTO.DetailRecipeDTO createRecipe(RecipeRequestDTO.CreateRecipeDTO createRecipeDTO, MultipartFile image) {
         // 회원 확인
@@ -90,36 +93,10 @@ public class RecipeServiceImpl implements RecipeService {
         Recipe savedRecipe = recipeRepository.save(recipe);
 
         // 식재료 추가 및 저장
-        List<Recipe_Ingredient> recipeIngredientList = createRecipeDTO.getIngredientList().stream()
-                .map(ingredientRequestDTO -> {
-                    // searchIngredient 호출하여 IngredientDto 객체 반환
-                    IngredientResponseDTO.IngredientDto ingredientDto = searchIngredient(ingredientRequestDTO.getName(), savedRecipe.getId());
-
-                    // Ingredient 객체 검색 (중복 방지)
-                    Ingredient ingredient = ingredientRepository.findByName(ingredientDto.getName())
-                            .orElseThrow(() -> new GeneralException(ErrorStatus.INGREDIENT_NOT_FOUND, "Ingredient not found after search."));
-
-                    // Recipe_Ingredient 객체 생성
-                    Recipe_Ingredient recipeIngredient = Recipe_Ingredient.builder()
-                            .recipe(savedRecipe)
-                            .ingredient(ingredient)
-                            .quantity(ingredientRequestDTO.getQuantity()) // 무게(양) 설정
-                            .build();
-
-                    // 중복 체크: 동일한 Recipe와 Ingredient의 조합이 이미 존재하는지 확인
-                    boolean alreadyExists = recipeIngredientRepository.existsByRecipeAndIngredient(savedRecipe, ingredient);
-                    if (!alreadyExists) {
-                        // Recipe_Ingredient 저장
-                        recipeIngredientRepository.save(recipeIngredient);
-                    }
-
-                    return recipeIngredient;
-                })
-                .collect(Collectors.toList());
-
-        int totalCalories = calculateTotalCalories(recipeIngredientList);
+        List<Recipe_Ingredient> recipeIngredientList = searchAndSaveIngredients(createRecipeDTO.getIngredientList(), savedRecipe);
 
         // 레시피 칼로리 업데이트
+        int totalCalories = calculateTotalCalories(recipeIngredientList);
         savedRecipe.updateCalories(totalCalories);
         recipeRepository.save(savedRecipe);
 
@@ -133,33 +110,12 @@ public class RecipeServiceImpl implements RecipeService {
                 .memberId(savedRecipe.getMember().getId())
                 .title(savedRecipe.getTitle())
                 .description(savedRecipe.getDescription())
-                .calories(totalCalories)
+                .calories(savedRecipe.getCalories())
                 .imageUrl(savedRecipe.getRecipeImage() != null ? savedRecipe.getRecipeImage().getUrl() : null)
                 .ingredientNames(ingredientNames)
                 .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
                 .build();
-    }
-
-    // 총칼로리 계산
-    private int calculateTotalCalories(List<Recipe_Ingredient> recipeIngredientList) {
-        return recipeIngredientList.stream()
-                .mapToInt(recipeIngredient -> {
-
-                    // 100g 칼로리 -> 무게 비율로 변경
-                    Integer caloriePer100g = recipeIngredient.getIngredient().getCalorie();
-                    Integer quantity = recipeIngredient.getQuantity();
-
-                    if (caloriePer100g == null || quantity == null) {
-                        return 0;
-                    }
-
-                    log.info("kcal 100g: {}", caloriePer100g);
-                    log.info("quantity: {}", quantity);
-                    log.info("result: {}", (caloriePer100g * (quantity / 100.0)));
-
-                    return (int) (caloriePer100g * (quantity / 100.0));
-                })
-                .sum();
     }
 
     // 레시피 전체 조회 (생성시간순 정렬) 추후 좋아요순으로 변경 필요
@@ -184,6 +140,7 @@ public class RecipeServiceImpl implements RecipeService {
                             .imageUrl(recipe.getRecipeImage().getUrl())
                             .ingredientNames(ingredientNames) // 식재료 리스트 추가
                             .createdAt(recipe.getCreatedAt())
+                            .updatedAt(recipe.getUpdatedAt())
                             .build();
                 })
                 .collect(Collectors.toList());
@@ -218,11 +175,13 @@ public class RecipeServiceImpl implements RecipeService {
                 .imageUrl(recipe.getRecipeImage().getUrl())
                 .ingredientNames(ingredientNames) // 식재료 리스트 추가
                 .createdAt(recipe.getCreatedAt())
+                .updatedAt(recipe.getUpdatedAt())
                 .build();
     }
 
 
     // 레시피 수정
+    @Transactional
     @Override
     public RecipeResponseDTO.DetailRecipeDTO updateRecipe(Long recipeId, RecipeRequestDTO.UpdateRecipeDTO updateRecipeDTO, MultipartFile image) {
         Long memberId = SecurityUtil.getCurrentMemberId();
@@ -250,12 +209,31 @@ public class RecipeServiceImpl implements RecipeService {
             recipe.updateRecipeImageUrl(imageUrl);
         }
 
+        // 기존 식재료 삭제
+        List<Recipe_Ingredient> existingIngredients = new ArrayList<>(recipe.getRecipeIngredientList());
+        for (Recipe_Ingredient recipeIngredient : existingIngredients) {
+            try {
+                recipeIngredientRepository.delete(recipeIngredient);
+            } catch (Exception e) {
+                log.error("Error deleting Recipe_Ingredient with ID: {}", recipeIngredient.getId(), e);
+            }
+        }
+        recipe.getRecipeIngredientList().clear();
+
+        // 새로운 식재료 리스트 추가
+        List<Recipe_Ingredient> recipeIngredientList = searchAndSaveIngredients(updateRecipeDTO.getIngredientList(), recipe);
+
+        // 총 칼로리 다시 계산
+        int totalCalories = calculateTotalCalories(recipeIngredientList);
+        recipe.updateCalories(totalCalories);
+
+        // 레시피 저장
         recipeRepository.save(recipe);
 
-        // 식재료 리스트 가져오기
-        List<String> ingredientNames = recipe.getRecipeIngredientList().stream()
+        // 응답 DTO 작성 및 반환
+        List<String> ingredientNames = recipeIngredientList.stream()
                 .map(recipeIngredient -> recipeIngredient.getIngredient().getName())
-                .toList();
+                .collect(Collectors.toList());
 
         return RecipeResponseDTO.DetailRecipeDTO.builder()
                 .recipeId(recipe.getId())
@@ -263,8 +241,10 @@ public class RecipeServiceImpl implements RecipeService {
                 .title(recipe.getTitle())
                 .description(recipe.getDescription())
                 .calories(recipe.getCalories())
-                .imageUrl(recipe.getRecipeImage().getUrl())
+                .imageUrl(recipe.getRecipeImage() != null ? recipe.getRecipeImage().getUrl() : null)
                 .ingredientNames(ingredientNames)  // 식재료 리스트 추가
+                .createdAt(recipe.getCreatedAt())
+                .updatedAt(LocalDateTime.now())
                 .build();
     }
 
@@ -328,6 +308,9 @@ public class RecipeServiceImpl implements RecipeService {
 
     }
 
+
+    // 메소드 정의
+    // 1. 식재료 검색
     @Override
     public IngredientResponseDTO.IngredientDto searchIngredient(String name, Long recipeId) {
         String url = "https://apis.data.go.kr/1471000/FoodNtrCpntDbInfo/getFoodNtrCpntDbInq";
@@ -336,8 +319,6 @@ public class RecipeServiceImpl implements RecipeService {
             // URL 인코딩
             String encodedName = URLEncoder.encode(name, StandardCharsets.UTF_8.toString());
             String encodedServiceKey = URLEncoder.encode(serviceKey, StandardCharsets.UTF_8.toString());
-
-            // 쿼리 파라미터 생성
             String query = String.format("serviceKey=%s&pageNo=1&numOfRows=5&type=json&FOOD_NM_KR=%s",
                     encodedServiceKey, encodedName);
 
@@ -350,54 +331,116 @@ public class RecipeServiceImpl implements RecipeService {
             // HTTP GET 요청
             ResponseEntity<String> response = restTemplate.getForEntity(uri, String.class);
 
-            // 응답을 JSON 형태로 파싱
-            ObjectMapper objectMapper = new ObjectMapper();
-            JsonNode rootNode = objectMapper.readTree(response.getBody());
+            if (response.getStatusCode().is2xxSuccessful()) {
+                // 응답을 JSON 형태로 파싱
+                ObjectMapper objectMapper = new ObjectMapper();
+                JsonNode rootNode = objectMapper.readTree(response.getBody());
 
-            // JSON 응답에서 필요한 데이터 추출
-            JsonNode itemsNode = rootNode.path("body").path("items");
+                // JSON 응답에서 필요한 데이터 추출
+                JsonNode itemsNode = rootNode.path("body").path("items");
 
-            if (itemsNode.isArray() && itemsNode.size() > 0) {
-                JsonNode item = itemsNode.get(0);  // 첫 번째 아이템
+                if (itemsNode.isArray() && itemsNode.size() > 0) {
+                    JsonNode item = itemsNode.get(0);  // 첫 번째 아이템
 
-                // AMT_NUM1 (칼로리) 데이터 추출
-                String calorieStr = item.path("AMT_NUM1").asText();
-                Integer calorie = null;
+                    // AMT_NUM1 (칼로리) 데이터 추출
+                    String calorieStr = item.path("AMT_NUM1").asText();
+                    Integer calorie = null;
 
-                if (calorieStr != null && !calorieStr.isEmpty()) {
-                    try {
-                        calorie = Integer.parseInt(calorieStr);
-                    } catch (NumberFormatException e) {
-                        calorie = 0; // 기본값 설정 또는 적절한 예외 처리
+                    if (calorieStr != null && !calorieStr.isEmpty()) {
+                        try {
+                            calorie = Integer.parseInt(calorieStr);
+                        } catch (NumberFormatException e) {
+                            calorie = 0; // 기본값 설정 또는 적절한 예외 처리
+                        }
                     }
-                }
 
-                Optional<Ingredient> existingIngredientOpt = ingredientRepository.findByName(name);
-                Ingredient ingredient;
-                if (existingIngredientOpt.isPresent()) {
-                    // 이미 존재하는 Ingredient 사용
-                    ingredient = existingIngredientOpt.get();
-                } else {
-                    // 새로운 Ingredient 객체 생성 및 저장
-                    ingredient = Ingredient.builder()
-                            .name(name)
-                            .calorie(calorie)
+                    Optional<Ingredient> existingIngredientOpt = ingredientRepository.findByName(name);
+                    Ingredient ingredient;
+                    if (existingIngredientOpt.isPresent()) {
+                        // 이미 존재하는 Ingredient 사용
+                        ingredient = existingIngredientOpt.get();
+                    } else {
+                        // 새로운 Ingredient 객체 생성 및 저장
+                        ingredient = Ingredient.builder()
+                                .name(name)
+                                .calorie(calorie)
+                                .build();
+                        ingredient = ingredientRepository.save(ingredient);
+                    }
+
+                    // API에서 불러온 칼로리를 포함한 IngredientDto 반환
+                    return IngredientResponseDTO.IngredientDto.builder()
+                            .name(ingredient.getName())
+                            .calorie(ingredient.getCalorie())
                             .build();
-                    ingredient = ingredientRepository.save(ingredient);
                 }
-
-                // API에서 불러온 칼로리를 포함한 IngredientDto 반환
-                return IngredientResponseDTO.IngredientDto.builder()
-                        .name(ingredient.getName())
-                        .calorie(ingredient.getCalorie())
-                        .build();
             }
-            throw new GeneralException(ErrorStatus.INGREDIENT_NOT_FOUND);
+
+            // 검색 결과가 없을 때
+            log.error("No items found for ingredient name: {}", name);
+            Ingredient ingredient = Ingredient.builder()
+                    .name(name)
+                    .calorie(0) // 검색 결과가 없으면 0으로 저장
+                    .build();
+            ingredient = ingredientRepository.save(ingredient);
+
+            return IngredientResponseDTO.IngredientDto.builder()
+                    .name(ingredient.getName())
+                    .calorie(ingredient.getCalorie())
+                    .build();
 
         } catch (IOException e) {
+            log.error("IOException while calling API: ", e);
             throw new GeneralException(ErrorStatus.API_CALL_ERROR);
         } catch (URISyntaxException e) {
+            log.error("URISyntaxException while creating URI: ", e);
             throw new GeneralException(ErrorStatus.API_CALL_ERROR);
         }
+    }
+
+    // 2. 총칼로리 계산
+    private int calculateTotalCalories(List<Recipe_Ingredient> recipeIngredientList) {
+        return recipeIngredientList.stream()
+                .mapToInt(recipeIngredient -> {
+
+                    // 100g 칼로리 -> 무게 비율로 변경
+                    Integer caloriePer100g = recipeIngredient.getIngredient().getCalorie();
+                    Integer quantity = recipeIngredient.getQuantity();
+
+                    if (caloriePer100g == null || quantity == null) {
+                        return 0;
+                    }
+
+                    return (int) (caloriePer100g * (quantity / 100.0));
+                })
+                .sum();
+    }
+
+    // 3. 식재료 리스트 검색&저장
+    private List<Recipe_Ingredient> searchAndSaveIngredients(List<IngredientRequestDTO.IngredientAndQuantityDTO> ingredientList, Recipe recipe) {
+        return ingredientList.stream()
+                .map(ingredientRequestDTO -> {
+                    // searchIngredient 호출하여 IngredientDto 객체 반환
+                    IngredientResponseDTO.IngredientDto ingredientDto = searchIngredient(ingredientRequestDTO.getName(), recipe.getId());
+
+                    // Ingredient 객체 검색 (중복 방지)
+                    Ingredient ingredient = ingredientRepository.findByName(ingredientDto.getName())
+                            .orElseThrow(() -> new GeneralException(ErrorStatus.INGREDIENT_NOT_FOUND, "Ingredient not found after search."));
+
+                    // Recipe_Ingredient 객체 생성
+                    Recipe_Ingredient recipeIngredient = Recipe_Ingredient.builder()
+                            .recipe(recipe)
+                            .ingredient(ingredient)
+                            .quantity(ingredientRequestDTO.getQuantity()) // 무게(양) 설정
+                            .build();
+
+                    boolean alreadyExists = recipeIngredientRepository.existsByRecipeAndIngredient(recipe, ingredient);
+                    if (!alreadyExists) {
+                        recipeIngredientRepository.save(recipeIngredient);
+                    }
+
+                    return recipeIngredient;
+                })
+                .collect(Collectors.toList());
     }
 }
